fixed: li scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ h4 {
 
   #nav-menu h4,
   #nav-menu h3,
+  #nav-menu li,
   .plus,
   hr,
   .logo {
